--- a/maket_№4-shop-cros/css/style.css
+++ b/maket_№4-shop-cros/css/style.css
@@ -9,7 +9,7 @@
 
 /* text-transform: uppercase; */
 
-.header{
+.header {
     /* display: flex; */
     position: relative;
     /* background: url("../img/decor/footer_sneakers.png") 50% 100% / cover no-repeat; */
@@ -26,7 +26,7 @@
     /* margin: 0 130px;  */
 }
 
-.header__inner{
+.header__inner {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: end;
@@ -50,7 +50,36 @@
     /* letter-spacing: 0.07em; */
     color: #000;
 }
-.header__search{
+
+.header__search {
     display: flex;
     gap: 10px;
+}
+
+/* ------------- */
+.header__hero {
+    position: relative;
+}
+
+.header__hero-title {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    position: absolute;
+    /* font-family: var(--); */
+    font-weight: 400;
+    font-size: 382px;
+    letter-spacing: -0.07em;
+    color: #ffffff24;
+    gap: 50px;
+    background: transparent;
+    text-transform: uppercase;
+    left: -7vw;
+    top: 30vh;
+}
+
+.header__swiper {
+    position: absolute;
+    /* z-index: 5; */
+    left: 28%;
+    top: 19vh;
 }
