--- a/maket_№4-shop-cros/css/style.css
+++ b/maket_№4-shop-cros/css/style.css
@@ -88,23 +88,31 @@
     /* margin-bottom: 80px; */
 }
 
-.button-pay {
+.button__pay {
     grid-column: -2/ -1;
     /* display: flex; */
     border: 1.56px solid #fff;
     color: #fff;
-    font-weight: 400;
+    /* font-weight: 400; */
     font-size: 20px;
     line-height: 2.56%;
     letter-spacing: 0.08em;
     padding: 6px 24px;
-    width: 196px;
+    max-width: 196px;
     height: 65px;
     background: transparent;
     /* margin: 0 260px 80px 0; */
     margin-bottom: 80px;
     align-items: center;
-    cursor: pointer;
+    /* cursor: pointer; */
+    transition: 1s;
+}
+.button__pay:hover{
+    background: #de343d;
+    color: #ffb800;
+    border: 1.56px solid #ffb800;
+    border-radius: 20px;
+    /* box-shadow: 0 4px 20px 0 #cec3b94d; */
 }
 
 /* ------------------------------------- */
@@ -113,7 +121,7 @@
     /* z-index: 10; */
     top: 14.5%;
     left: 24.5%;
-    width: 100%;
+    max-width: 800px;
     /* height: 80vh; */
 }
 
